--- a/Study Guides/Audio Analysis and Machine Listening.html
+++ b/Study Guides/Audio Analysis and Machine Listening.html
@@ -74,7 +74,7 @@
 <div class='note'><span class='notelabel'>NOTE:</span> This is a very simplified explanation of Fourier Analysis. The actual mathematics of Fourier Transform is quite complicated and there are whole courses dedicated to this subject at Maths and Engineering Departments. People do their PhDs and further research in this topic, so you can imagine how vast it is!</div><div class='image'><img src='/Users/federicoreuben/Documents/York/2016-2017/Teaching/Undergraduate/Computer.play/Seminars/audio analysis/fft_class1.png'/></div>
 
 <p><div class='image'><img src='/Users/federicoreuben/Documents/York/2016-2017/Teaching/Undergraduate/Computer.play/Seminars/audio analysis/fft_class2.png'/><br><b>FFT class at MIT - ocw.mit.edu</b></div>
-<div class='note'><span class='notelabel'>NOTE:</span> Ask JEZ, if you want some engineering insights into FFT! In fact a lot of Jez's research is related to spectral analysis and modelling!</div><h3><a class='anchor' name='Spectrograms'>Spectrograms</a></h3>
+<div class='note'><span class='notelabel'>NOTE:</span> Ask Jez if you want some engineering insights into FFT! In fact a lot of Jez's research is related to spectral analysis and modelling!</div><h3><a class='anchor' name='Spectrograms'>Spectrograms</a></h3>
 <div class='image'><img src='/Users/federicoreuben/Documents/York/2016-2017/Teaching/Undergraduate/Computer.play/Seminars/audio analysis/spectogram1.png'/></div>
 
 <p><div class='image'><img src='/Users/federicoreuben/Documents/York/2016-2017/Teaching/Undergraduate/Computer.play/Seminars/audio analysis/spectogram2.png'/></div>
