fixed quant in synths

--- a/Code Examples/Synth Fun.html
+++ b/Code Examples/Synth Fun.html
@@ -409,7 +409,7 @@ Pdef(\pat1, Pbind(\degree, 0));
 Ndef(\play1, Pdef(\pat1));
 )
 
-Pdef(\pat1).quant(32); //quantise
+Pdef(\pat1).quant = 8; //quantise (every 8 beats)
 
 (
 ~pat = Pbind(\instrument, \wavestack1, \degree, Pseq((0..7).scramble, inf),
