more machine listening

--- a/Classes/OnsetStatistics.html
+++ b/Classes/OnsetStatistics.html
@@ -19,16 +19,16 @@
 <div id='summary'>Extract basic statistics from a series of onset triggers</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/Classes/OnsetStatistics.sc'>OnsetStatistics.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/Classes/OnsetStatistics.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/Classes/OnsetStatistics.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Onsets.html">Onsets</a>, <a href="./../Classes/AttackSlope.html">AttackSlope</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -42,9 +42,9 @@
 <p>Size of operating window (from now into the past) in seconds. Any onset triggers within this time are taken into account<tr><td class='argumentname'>hopsize<td class='argumentdesc'>
 <p>Not used at present, re-calculates every block</table><h4>Returns:</h4>
 <div class='returnvalue'>
-<p>(describe returnvalue here) [0] Density of onsets (number of triggers) in the window  [1] Mean of IOIs (in seconds) [2] Standard deviation of IOIs </div></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>(describe returnvalue here) [0] Density of onsets (number of triggers) in the window  [1] Mean of IOIs (in seconds) [2] Standard deviation of IOIs </div></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>//[0] density (number of onsets in window)
 //[1] mean IOI
@@ -67,4 +67,4 @@ b = Buffer.read(s, Platform.resourceDir +/+ "sounds/a11wlk01.wav")
     source
 }.play; 
 )</pre>
-<div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/HelpSource/Classes/OnsetStatistics.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/HelpSource/Classes/OnsetStatistics.schelp</a><br>link::Classes/OnsetStatistics::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/HelpSource/Classes/OnsetStatistics.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/SCMIRUGens/HelpSource/Classes/OnsetStatistics.schelp</a><br>link::Classes/OnsetStatistics::<br>sc version: 3.8.0</div></div></body></html>
