--- a/Classes/Gammatone.html
+++ b/Classes/Gammatone.html
@@ -19,16 +19,16 @@
 <div id='summary'>Single gammatone filter</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/Classes/AuditoryModeling.sc'>AuditoryModeling.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/Classes/AuditoryModeling.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/Classes/AuditoryModeling.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Meddis.html">Meddis</a>, <a href="./../Classes/HairCell.html">HairCell</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -41,9 +41,9 @@
 <tr><td class='argumentname'>input<td class='argumentdesc'>
 <p>input sound to filter.<tr><td class='argumentname'>centrefrequency<td class='argumentdesc'>
 <p>Centre frequency. Default value is 440.0. Cannot be modulated.<tr><td class='argumentname'>bandwidth<td class='argumentdesc'>
-<p>Bandwidth of filter. Default value is 200.0. Cannot be modulated.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Bandwidth of filter. Default value is 200.0. Cannot be modulated.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>// what this example does
 { Gammatone.ar(WhiteNoise.ar) }.play;
@@ -113,4 +113,4 @@ bandwidths= 24.7*(freqs*0.00437 +1);
 
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/HelpSource/Classes/Gammatone.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/HelpSource/Classes/Gammatone.schelp</a><br>link::Classes/Gammatone::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/HelpSource/Classes/Gammatone.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/AuditoryModeling/HelpSource/Classes/Gammatone.schelp</a><br>link::Classes/Gammatone::<br>sc version: 3.8.0</div></div></body></html>
