--- a/Classes/LPCAnalyzer.html
+++ b/Classes/LPCAnalyzer.html
@@ -19,15 +19,15 @@
 <div id='summary'>Live Linear Predictive Coding Analysis and Resynthesis</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/classes/LPCAnalyzer.sc'>LPCAnalyzer.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/classes/LPCAnalyzer.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/classes/LPCAnalyzer.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -45,9 +45,9 @@
 <p>Number of poles used to model spectrum of input within one window<tr><td class='argumentname'>testE<td class='argumentdesc'>
 <p>Whether to test for meeting of error condition, for variable number of poles solution up to p<tr><td class='argumentname'>delta<td class='argumentdesc'>
 <p>Test value, close to but just below 1.<tr><td class='argumentname'>windowtype<td class='argumentdesc'>
-<p>Windowing. 0 is rectangular window, abrupt swap of filter coefficients after every n samples. 1 is triangular window, and runs two LPCAnalyzers crossfading, for a smoother ride, at expense of double CPU cost.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Windowing. 0 is rectangular window, abrupt swap of filter coefficients after every n samples. 1 is triangular window, and runs two LPCAnalyzers crossfading, for a smoother ride, at expense of double CPU cost.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>{LPCAnalyzer.ar(SoundIn.ar,Impulse.ar(440,0,0.2), 256, 50)}.play
 
@@ -139,4 +139,4 @@ source= Impulse.ar(delaytime.reciprocal);
 }.play
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/HelpSource/Classes/LPCAnalyzer.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/HelpSource/Classes/LPCAnalyzer.schelp</a><br>link::Classes/LPCAnalyzer::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/HelpSource/Classes/LPCAnalyzer.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/NCAnalysisUGens/HelpSource/Classes/LPCAnalyzer.schelp</a><br>link::Classes/LPCAnalyzer::<br>sc version: 3.8.0</div></div></body></html>
